<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Important names: -->
    <string name="app_name">Flare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Flare</string>
    <string name="title_activity_response_guide">Response Manual</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_pingreport">Report Emergency</string>

    <!-- Tab titles: -->
    <string name="tab_home">Home</string>
    <string name="tab_manual">Manual</string>
    <string name="tab_log">Ping Log</string>

    <!-- Signup page: -->
    <string name="signup_welcome">Welcome to Flare!</string>
    <string name="signup_fill_info">Please fill out the following information</string>
    <string name="signup_email">Email</string>
    <string name="signup_btn_submit">SUBMIT</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_address">Address</string>
    <string name="signup_birthday">Birthday (MM/DD/YYYY)</string>
    <string name="signup_phone">Phone Number</string>
    
    <!-- Home page: -->
    <string name="home_btn_emergency">Help Me!</string>
    <string name="home_btn_clear">I\'m Okay!</string>
    <string name="home_last_ping">Last Ping</string>
    <string name="home_no_last_ping">No pings submitted yet.</string>
    <string name="home_emergency_watch">Emergency Watch</string>
    <string name="home_lv_empty">No nearby emergencies.</string>

    <!-- Manual names: -->
    <string name="manual_pick_disaster">Pick your situation:</string>
    <string name="manual_btn_more">More Info</string>
    <string name="manual_bullet">\u2022</string>
    <string name="response_guide_before">Before</string>
    <string name="response_guide_during">During</string>
    <string name="response_guide_after">After</string>

    <!-- Button names for log: -->
    <string name="log_last_ping">Last Ping</string>
    <string name="log_time">[TIME]</string>
    <string name="log_location">[current location]</string>

    <!-- For testing purposes. Remove after filling in fragments: -->
    <string name="home_body">This is the Home fragment.</string>
    <string name="manual_body">This is the Manual fragment.</string>
    <string name="log_body">This is the Ping Log fragment.</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="medium_lorem_ipsum">"Pellentesque dictum sit amet sapien in faucibus. Curabitur fermentum, nulla quis placerat imperdiet, est nisi placerat arcu, non ornare erat justo at enim. Nam vitae porttitor sem. Quisque non quam nisi. Proin quis urna id elit ultrices cursus non tempus dolor"</string>
    <string name="long_lorem_ipsum">"Mauris dapibus convallis massa, vitae ultrices est ultricies ut. Nam porttitor et metus ac bibendum. Nam at justo vitae felis lacinia ultrices laoreet ut arcu. Nam ac purus et turpis convallis mollis. Integer lorem eros, hendrerit imperdiet interdum vitae, sagittis eget ipsum. Donec dignissim tortor at felis fringilla, sed dignissim diam vulputate. Nam sit amet facilisis massa. Suspendisse posuere quam quis augue dapibus venenatis."</string>

    <!-- Ping Report text -->
    <string name="pingreport_title">Report Emergency</string>
    <string name="slider_numpeople">Number of people:</string>
    <string name="slider_situation">Severity of situation:</string>
    <string name="pingreport_btn_submit">Request Help</string>

</resources>