<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="0dp"
        android:layout_height="40dp" >
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/signup_welcome"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/signup_fill_info"
        android:textSize="20sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="5dp" >
    </View>

    <!-- Input Text -->

    <EditText
        android:id="@+id/signup_txtview_firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/signup_first_name"
        android:inputType="text"
        android:paddingBottom="10sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_txtview_lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/signup_last_name"
        android:inputType="text"
        android:paddingBottom="10sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_txtview_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="10sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_txtview_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/signup_phone"
        android:inputType="phone"
        android:paddingBottom="10sp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_txtview_birthday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/signup_birthday"
        android:inputType="date"
        android:paddingBottom="10sp"
        android:textSize="20sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="10dp" >
    </View>

    <Button
        android:id="@+id/signup_btn_submit"
        style="@style/SubmitButton"
        android:layout_gravity="center"
        android:text="@string/signup_btn_submit" />

</LinearLayout>