<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/pingreport_title"
        style="@style/TitleTextView"
        android:text="@string/pingreport_title" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/slider_numpeople"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/pingreport_textview_population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/pink" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/pingreport_slider_population"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="99"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/slider_situation"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/pingreport_textview_severity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/pingreport_slider_severity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="98"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <Button
        android:id="@+id/pingreport_btn_submit"
        style="@style/SubmitButton"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/pingreport_btn_submit" />

</LinearLayout>