<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/response_guide_title"
        style="@style/TitleTextView"
        android:textColor="@color/pink" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/response_guide_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/response_guide_before"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/response_guide_before_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/response_guide_during"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/response_guide_during"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/response_guide_during_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/response_guide_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/response_guide_after"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/response_guide_after_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>